# toy_rism

./: Cargo.toml  README.md  plotter.py  rgr.csv  rgr.csv_RDF.eps
src/: grid.rs  lib.rs  main.rs  potential.rs  util.rs
