[package]
name = "toy_rism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
approx = "0.5.0"
plotters = "0.3"
ndarray =  { version = "0.15.4", features = ["approx-0_5"] }
csv = "1.1"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
ndarray-stats = "0.5.0"
rustdct = "0.6.0"
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }
